tests/NormalTests/paczka1/small_fuzzy/77719168.err
Error in line 6: gkx97x5 S127 9,5
Error in line 7: ZbgPCvfY A837 87,6
